# hr-recruitment-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-job-project-setup/: 01-CONTEXT.md  01-PLAN-SUMMARY.md  01-PLAN.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  02-PLAN-SUMMARY.md  02-PLAN.md
.planning/phases/02-hunting-outreach-ai-candidate-discovery/: 01-PLAN-SUMMARY.md  01-PLAN.md  02-PLAN-SUMMARY.md  02-PLAN.md  02-UI-SPEC.md  03-PLAN.md
migrations/: 001_initial.sql
src/app/: __init__.py  db.py  main.py  models.py  schemas.py
src/app/agents/: __init__.py  base.py  company_mapper.py  role_identifier.py
src/app/routes/: __init__.py  clients.py  hunting.py  jobs.py
src/hr_platform/: api.py  cli.py  orchestrator.py
src/hr_platform/agents/: enrichment.py  interview.py  presentation.py  screening.py
src/hr_platform/db/: database.py
src/hr_platform/ingestion/: cv_parser.py
src/hr_platform/models/: schema.py
src/hr_platform/static/: index.html
static/: style.css
templates/: base.html
templates/clients/: create.html
templates/jobs/: detail.html  form.html  hunting-candidates-fragment.html  hunting-companies-fragment.html  hunting.html  list.html
tests/: __init__.py  conftest.py  test_agents.py  test_hunting_routes.py  test_models.py  test_routes.py
